--- a/Proyectos/Black_Jack/assets/css/style.css
+++ b/Proyectos/Black_Jack/assets/css/style.css
@@ -2,8 +2,16 @@
   margin: 0;
   padding: 0;
 }
+img {
+  max-width: 100%;
+  max-height: 100%;
+}
+
 body {
-  background-color: #2f4f30;
+  background-image: url("../imgs/blackjack.jpg");
+  background-repeat: no-repeat;
+  background-position: top center;
+  object-fit: cover;
   color: white;
   box-sizing: border-box;
 }
@@ -26,3 +34,7 @@ body {
 #computer-cards {
   height: 240px;
 }
+/* .divBtns,
+.container {
+  z-index: 10;
+} */
